--- a/src/screens/Landing/Main/Main.module.css
+++ b/src/screens/Landing/Main/Main.module.css
@@ -38,7 +38,7 @@
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     width: 89%;
-    margin-top: -108px;
+    margin-top: -120px;
     padding: 5px 0;
 }
 
@@ -52,7 +52,7 @@
 
 .optionLabel {
     font-weight: 500;
-    font-size: clamp(18px, 1.25rem, 24px);
+    font-size: clamp(18px, 1.2vw, 24px);
     margin: 10px 0;
 }
 
@@ -60,7 +60,6 @@
     margin: 5px auto !important ; 
     padding: 0 16px !important;
 }
-
 
 @media only screen and (min-width: 540px) and (max-width: 571px) {
     .panel {
@@ -81,4 +80,18 @@
     .optionBtn {
         padding: 4px 16px !important;
     }    
+}
+
+@media only screen and (min-width: 1024px) {
+    .splash {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .tagline {
+        font-size: clamp(30px, 2.4rem, 54px);
+        grid-column-start: 2;
+    }
+    .optionLabel {
+        font-size: clamp(18px, 2vw, 24px);
+    }
 }
