--- a/src/screens/Landing/WhyCorpmart/WhyCorpmart.module.css
+++ b/src/screens/Landing/WhyCorpmart/WhyCorpmart.module.css
@@ -12,20 +12,20 @@
 
 .title {
     font-weight: 600;
-    font-size: clamp(22px, 28px, 48px);
+    font-size: clamp(22px, 7.2vw, 48px);
     margin: 0;
 }
 
 .subTitle {
-    font-size: clamp(16px, 18px, 24px);
+    font-size: clamp(16px, 1.2vw, 24px);
     line-height: 150%;
 }
 
 .frames {
     display: grid;
     grid-template-columns: repeat(2, minmax(104px, 1fr));
-    gap: 28px;
-    margin: 16px 28px;
+    gap: 12px;
+    margin: 0 28px;
 }
 
 .frame {
@@ -48,7 +48,7 @@
 }
 
 .frameTitle {
-    font-size: clamp(18px, 6.2vw, 24px);
+    font-size: clamp(16px, 4.8vw, 24px);
     width: 100%;
 }
 .frameTitle p, .frameDesc p {
@@ -57,6 +57,36 @@
 
 .frameDesc {
     font-weight: 300;
-    font-size: clamp(12px, 4vw, 18px);
+    font-size: clamp(12px, 3.6vw, 13.6px);
     width: 100%;
+}
+
+@media only screen and (min-width: 596px) {
+    .title {
+        font-size: clamp(24px, 3.6vw ,48px);
+    }
+    .subTitle {
+        margin: 12px 18%;
+        font-size: clamp(16px, 2.4vw, 24px);
+    }
+    .frameDesc {
+        font-size: clamp(12px, 2.4vw, 18px);
+    }
+}
+
+@media only screen and (min-width: 596px) {
+    .frames{
+        margin: 0 8%;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .WhyCorpmart {
+        display: grid;
+        grid-template-rows: 1fr 1.5fr;
+        height: 80vh;
+    }
+    .frames {
+        grid-template-columns: repeat(4, minmax(104px, 1fr));
+    }
 }
