Moved BusinessSlide to a separate component, renamed BusinessForSale to BusinessShowcase + Style fixes

--- a/src/screens/Landing/Main/Main.module.css
+++ b/src/screens/Landing/Main/Main.module.css
@@ -58,7 +58,7 @@
 
 .optionBtn {
     margin: 5px auto !important ; 
-    padding: 0 16px !important;
+    padding: 12px 28px !important;
 }
 
 @media only screen and (min-width: 540px) and (max-width: 571px) {
