--- a/src/screens/Landing/BusinessShowcase/BusinessSlide/BusinessSlide.module.css
+++ b/src/screens/Landing/BusinessShowcase/BusinessSlide/BusinessSlide.module.css
@@ -3,6 +3,7 @@
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     width: 80%;
+    max-width: 330px;
     padding: 20px;
 }
 
