--- a/src/screens/Landing/WhyCorpmart/WhyCorpmart.module.css
+++ b/src/screens/Landing/WhyCorpmart/WhyCorpmart.module.css
@@ -79,6 +79,13 @@
     }
 }
 
+@media only screen and (min-width: 748px) {
+    .frameDesc {
+        font-size: clamp(12px, 2vw, 16px);
+        /* font-size: 2vw; */
+    }
+}
+
 @media only screen and (min-width: 1024px) {
     .WhyCorpmart {
         display: grid;
