Created Testimonials + Style bug fixes
- Need to make carousel automatic idk how

--- a/src/screens/Landing/Testimonials/Testimonials.module.css
+++ b/src/screens/Landing/Testimonials/Testimonials.module.css
@@ -1,14 +1,9 @@
-.BusinessShowcase {
+.Testimonials {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     height: 100vh;
-    background: #4AB9CA;
-}
-
-.header {
-    color: white;
 }
 
 .title {
