--- a/src/screens/Landing/Testimonials/TestimonialSlide/TestimonialSlide.module.css
+++ b/src/screens/Landing/Testimonials/TestimonialSlide/TestimonialSlide.module.css
@@ -30,6 +30,11 @@
     font-size: 14px;
     font-weight: 300;
     text-align: justify;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 10;
+    -webkit-box-orient: vertical;
 }
 
 @media only screen and (min-width: 768px) {
