--- a/src/screens/Landing/Testimonials/TestimonialSlide/TestimonialSlide.module.css
+++ b/src/screens/Landing/Testimonials/TestimonialSlide/TestimonialSlide.module.css
@@ -14,6 +14,18 @@
     margin: 10px 0;
 }
 
+.authorImg {
+    width: 60px;
+    height: 60px;
+    overflow: hidden;
+    border-radius: 99px;
+}
+.defaultImg {
+    background-color: #C4C4C4;
+    width: 100%;
+    height: 100%;
+}
+
 .authorName {
     margin: 2.5px 0;
     font-size: 18px;
@@ -25,7 +37,7 @@
     font-weight: 300;
 }
 
-.blogText {
+.testimonialText {
     margin: 10px 0;
     font-size: 14px;
     font-weight: 300;
