--- a/src/screens/Landing/Main/Main.module.css
+++ b/src/screens/Landing/Main/Main.module.css
@@ -78,8 +78,14 @@
         margin: 20px 0;
     }
     .optionBtn {
-        padding: 4px 16px !important;
+        padding: 12px 16px !important;
     }    
+}
+
+@media only screen and (min-width: 630px) {
+    .panel {
+        margin-top: -75px;
+    }
 }
 
 @media only screen and (min-width: 1024px) {
