--- a/src/screens/Landing/WhyCorpmart/WhyCorpmart.module.css
+++ b/src/screens/Landing/WhyCorpmart/WhyCorpmart.module.css
@@ -25,7 +25,7 @@
     display: grid;
     grid-template-columns: repeat(2, minmax(104px, 1fr));
     gap: 12px;
-    margin: 0 28px;
+    margin: 12px 16px;
 }
 
 .frame {
