--- a/src/components/Navbar/NavbarMobile.module.css
+++ b/src/components/Navbar/NavbarMobile.module.css
@@ -7,13 +7,46 @@
     width: 100%;
     height: 64px;
     z-index: 99999;
-    transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in;
 }
 
 .navBtn {
     all: unset;
     height: 64px;
     z-index: 99999;
+}
+
+.navbarExpand {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 99999;
+    overflow: hidden;
+}
+
+.navExpContents {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: calc(75% - 40px);
+    height: 100vh;
+    background-color: white;
+    z-index: 99999;
+    color: black;
+    font-weight: 300;
+    font-size: 14px;
+    overflow: hidden;
+    transition: all 0.4s ease-in;
+    text-align: left;
+    padding: 20px 0;
+}
+
+.navName {
+    font-weight: normal;
+    font-size: 16px;
 }
 
 @media only screen and (min-width: 769px) {
