--- a/src/screens/Landing/Footer/Footer.module.css
+++ b/src/screens/Landing/Footer/Footer.module.css
@@ -25,6 +25,7 @@
 .links {
     display: flex;
     flex-direction: row;
+    align-items: center;
     font-weight: 300;
     font-size: clamp(12px, 3vw, 16px);
     margin: 16px 0;
