--- a/src/components/FilterSort/filterOptions/filterOptions.module.css
+++ b/src/components/FilterSort/filterOptions/filterOptions.module.css
@@ -20,7 +20,9 @@
     all: unset;
     display: grid;
     grid-template-columns: 9fr 1fr;
-    width: 84%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .optionExpLabel {
