--- a/src/components/FilterSort/FilterSortMobile.module.css
+++ b/src/components/FilterSort/FilterSortMobile.module.css
@@ -54,3 +54,9 @@
     text-align: left;
     margin: 7.5px 10px;
 }
+
+@media only screen and (min-width: 1024px) {
+    .FilterSort {
+        display: none;
+    }
+}
