--- a/src/screens/Login/Login.module.css
+++ b/src/screens/Login/Login.module.css
@@ -1,4 +1,4 @@
-.Verification {
+.Login {
     display: flex;
     background-color: rgba(0,0,0,0.5);
     /* background-color: #E5E5E5; */
@@ -61,7 +61,7 @@
 
 .submitBtn {
     padding: 10px 20px;
-    margin: 20px 0; 
+    margin-bottom: 20px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -77,7 +77,7 @@
         margin: 25px 0;
     }
     .subtitle {
-        font-size: clamp(18px, 1.38vw, 20px);
+        font-size: clamp(16px, 1.2vw, 20px);
         margin: 20px 120px;
     }
     .form {
@@ -97,6 +97,6 @@
         margin: 15px 0;
     }
     .submitBtn {
-        margin: 20px 0 50px 0;
+        margin: 0px 0 50px 0;
     }
 }
