--- a/src/screens/Signup/Signup.module.css
+++ b/src/screens/Signup/Signup.module.css
@@ -1,4 +1,4 @@
-.Login {
+.Signup {
     display: flex;
     background-color: rgba(0,0,0,0.5);
     /* background-color: #E5E5E5; */
@@ -31,17 +31,15 @@
     padding: 20px 0;
     min-height: 51vh;
     display: grid;
-    grid-template-rows: 0.5fr 0.5fr 0.5fr;
+    grid-template-rows: 0.1fr 0.5fr 0.1fr;
 }
 
 .formGroup {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 55px;
-    margin-bottom: 80px;
-    margin-left: clamp(30px, 8vw, 240px);
-    margin-right: clamp(30px, 8vw, 240px);
+    margin: 7.5px 30px;
+    text-align: left;
 }
 
 .inputLabel {
@@ -67,50 +65,39 @@
     margin-bottom: 20px;
 }
 
+@media only screen and (min-width: 512px) {
+    .nameFields {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
 @media only screen and (min-width: 768px) {
-    .formGroup {
-        margin-left: clamp(30px, 12vw, 240px);
-        margin-right: clamp(30px, 12vw, 240px);
+    .contactFields {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media only screen and (min-width: 1024px) {
-    .title {
-        font-size: clamp(32px, 2.4vw, 36px);
-    }
-    .subtitle {
-        font-size: clamp(16px, 1.2vw, 20px);
-    }
-    .form {
-        width: 64%;
-        grid-template-rows: 0.1fr 0.1fr 0.1fr;
-    }
-    .formGroup {
-        margin-left: clamp(30px, 16vw, 240px);
-        margin-right: clamp(30px, 16vw, 240px);
+    .formFields {
+        width: 74%;
+        margin: 15px auto;
     }
     .inputLabel {
         font-size: clamp(16px, 1.4vw, 22px);
     }
     .inputField {
         font-size: clamp(18px, 1.2vw, 20px);
-        margin: 15px 0;
     }
     .submitBtn {
         padding: 12px 52px;
-        margin-bottom: 50px;
     }
 }
 
 @media only screen and (min-width: 1440px) {
-    .title {
-        margin: 25px 0;
+    .form {
+        grid-template-rows: 0.4fr 0.4fr 0.5fr;
     }
-    .subtitle {
-        margin: 20px 120px;
-    }
-    .formGroup {
-        margin-top: 76px;
-        margin-bottom: 100px;
-    }
+
 }
