--- a/src/screens/Landing/Footer/Footer.module.css
+++ b/src/screens/Landing/Footer/Footer.module.css
@@ -30,6 +30,14 @@
     font-size: clamp(12px, 3vw, 16px);
     margin: 16px 0;
 }
+.links a:hover {
+    text-decoration: underline;
+}
+.links a {
+    display: flex;
+    text-decoration: none;
+    color: inherit;
+}
 
 .copyright {
     display: grid;
