--- a/src/components/Navbar/NavbarMobile.module.css
+++ b/src/components/Navbar/NavbarMobile.module.css
@@ -48,6 +48,10 @@
     font-weight: normal;
     font-size: 16px;
 }
+.navLink {
+    color: black;
+    text-decoration: none;
+}
 
 @media only screen and (min-width: 769px) {
     .Navbar {
