--- a/src/components/FilterSort/FilterDiv/FilterDiv.module.css
+++ b/src/components/FilterSort/FilterDiv/FilterDiv.module.css
@@ -1,10 +1,13 @@
 .FilterDiv {
     display: none;
     margin-top: 64px;
-    height: 100%;
     background: #FFFFFF;
     padding: 0 8px;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
+.FilterDiv::-webkit-scrollbar { display: none; }
 
 .header {
     display: flex;
