--- a/src/screens/Signup/Signup.module.css
+++ b/src/screens/Signup/Signup.module.css
@@ -22,6 +22,13 @@
     font-size: clamp(12px, 3.2vw, 16px);
     margin: 10px 0;
 }
+.subtitle a {
+    color: #4AB9CA;
+    text-decoration: none;
+}
+.subtitle a:hover {
+    text-decoration: underline;
+}
 
 .form {
     background-color: white;
