--- a/src/screens/BusinessesForSale/BusinessesForSale.module.css
+++ b/src/screens/BusinessesForSale/BusinessesForSale.module.css
@@ -46,7 +46,7 @@
     .container {
         display: grid;
         grid-template-columns: 1.5fr 5fr;
-        height: 100vh;
+        min-height: 100vh;
     }
     .content {
         overflow-y: scroll;
