--- a/src/components/BlogSlide/BlogSlide.module.css
+++ b/src/components/BlogSlide/BlogSlide.module.css
@@ -10,13 +10,13 @@
 }
 
 .header p {
-    margin: 5px 0;
+    margin: 10px 0;
 }
 
 .title {
-    font-size: clamp(18px, 4.8vw, 20px);
+    font-size: 18px;
     line-height: 150%;
-    margin: 5px 0;
+    margin: 10px 0;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
@@ -28,7 +28,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     font-weight: 300;
-    font-size: clamp(14px, 3.7vw, 16px);
+    font-size: 14px;
 }
 
 .date {
@@ -39,7 +39,13 @@
     text-align: right;
 }
 
-.blogText {
+.imgPreview {
+    background: #C4C4C4;
+    width: 295px;
+    height: 194px;
+}
+
+/* .blogText {
     font-weight: 300;
     font-size: clamp(14px, 3.7vw, 16px);
     text-align: justify;
@@ -49,4 +55,4 @@
     display: -webkit-box;
     -webkit-line-clamp: 10;
     -webkit-box-orient: vertical;
-}
+} */
