--- a/src/components/BusinessSlide/BusinessSlide.module.css
+++ b/src/components/BusinessSlide/BusinessSlide.module.css
@@ -4,7 +4,7 @@
     border-radius: 10px;
     width: 80%;
     max-width: 330px;
-    padding: 20px;
+    padding: 16px 20px;
 }
 
 .businessDesc {
@@ -13,11 +13,22 @@
     margin: 0;
 }
 
+.verified {
+    display: flex;
+    flex-direction: row;
+    margin-top: 4px;
+    font-size: 12px;
+    color: #55B546;
+}
+.verified p {
+    margin: 0 7px;
+}
+
 .businessInfo {
     display: grid;
     grid-template-rows: repeat(5, 1fr);
     text-align: left;
-    margin: 15px auto;
+    margin: 4px auto;
 }
 
 .businessInfoRow {
@@ -29,18 +40,18 @@
 .businessInfoLabel {
     color: #484848;
     font-weight: 300;
-    font-size: clamp(14px, 4vw, 16px);
+    font-size: 14px;
 }
 
 .businessInfoValue {
     color: black;
     font-weight: 300;
-    font-size: clamp(14px, 4vw, 16px);
+    font-size: 14px;
 }
 
 .btnContainer {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 }
