--- a/src/screens/Landing/Blogs/Blogs.module.css
+++ b/src/screens/Landing/Blogs/Blogs.module.css
@@ -25,7 +25,7 @@
 }
 
 .btnContainer {
-    margin-top: 30px;
+    margin: 30px 0;
 }
 .btnContainer a {
     text-decoration: none;
@@ -33,8 +33,11 @@
 }
 
 @media only screen and (min-width: 600px) {
+    .header {
+        margin-top: 15px;
+    }
     .title {
-        font-size: clamp(24px, 6vw, 44px);
+        font-size: clamp(24px, 6vw, 36px);
     }
     .subtitle {
         font-size: clamp(16px, 4.28vw, 20px);
