--- a/src/screens/Landing/BusinessShowcase/BusinessShowcase.module.css
+++ b/src/screens/Landing/BusinessShowcase/BusinessShowcase.module.css
@@ -29,7 +29,7 @@
 }
 
 .btnContainer {
-    margin-top: 30px;
+    margin: 30px 0;
 }
 .btnContainer a {
     text-decoration: none;
@@ -37,7 +37,10 @@
 }
 
 @media only screen and (min-width: 600px) {
+    .header {
+        margin-top: 15px;
+    }
     .title {
-        font-size: clamp(24px, 6vw, 48px);
+        font-size: clamp(24px, 6vw, 36px);
     }
 }
