--- a/src/screens/Landing/Testimonials/Testimonials.module.css
+++ b/src/screens/Landing/Testimonials/Testimonials.module.css
@@ -24,7 +24,7 @@
 }
 
 .btnContainer {
-    margin-top: 30px;
+    margin: 30px 0;
 }
 .btnContainer a {
     text-decoration: none;
@@ -32,8 +32,11 @@
 }
 
 @media only screen and (min-width: 600px) {
+    .header {
+        margin-top: 15px;
+    }
     .title {
-        font-size: clamp(24px, 6vw, 44px);
+        font-size: clamp(24px, 6vw, 36px);
     }
     .subtitle {
         font-size: clamp(16px, 4.28vw, 20px);
