--- a/src/screens/BusinessesForSale/BusinessesForSale.module.css
+++ b/src/screens/BusinessesForSale/BusinessesForSale.module.css
@@ -15,7 +15,7 @@
 
 .header {
     padding-top: 20px;
-    margin-bottom: 15px;
+    margin: 0 0 15px 16px;
     text-align: left;
 }
 
@@ -33,7 +33,7 @@
 
 .showcase {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 330px));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     row-gap: 30px;
     justify-content: center;
 }
