--- a/src/screens/Landing/WhyCorpmart/WhyCorpmart.module.css
+++ b/src/screens/Landing/WhyCorpmart/WhyCorpmart.module.css
@@ -62,11 +62,11 @@
 
 @media only screen and (min-width: 596px) {
     .title {
-        font-size: clamp(24px, 3.6vw ,48px);
+        font-size: 36px;
     }
     .subTitle {
         margin: 12px 18%;
-        font-size: clamp(16px, 2.4vw, 24px);
+        font-size: 20px;
     }
     .frameDesc {
         font-size: clamp(12px, 2.4vw, 18px);
@@ -87,21 +87,27 @@
 
 @media only screen and (min-width: 1024px) {
     .WhyCorpmart {
-        display: grid;
+        /* display: grid;
         grid-template-rows: 1fr 1.5fr;
-        height: 100vh;
+        height: 100vh; */
     }
     .whyText {
         margin-top: 15px;
     }
     .frame {
-        grid-template-rows: 1fr 1fr 2.8fr;
+        grid-template-rows: 0.8fr 0.2fr 1fr;
+        margin: 0 auto;
     }
     .frames {
-        grid-template-columns: repeat(4, minmax(104px, 1fr));
+        grid-template-columns: repeat(3, minmax(104px, 1fr));
         column-gap: 32px;
+        width: 84%
+    }
+    .frameTitle {
+        font-size: 20px;
     }
     .frameDesc {
-        font-size: clamp(12px, 1.4vw, 18px);
+        /* font-size: clamp(12px, 1.4vw, 18px); */
+        font-size: 16px;
     }
 }
