--- a/src/components/FilterSort/filterOptions/filterOptions.module.css
+++ b/src/components/FilterSort/filterOptions/filterOptions.module.css
@@ -46,3 +46,14 @@
     margin: 0 10px;
     text-align: left;
 }
+
+.searchBox {
+    all: unset;
+    border: 2px solid #000000;  
+    box-sizing: border-box;
+    border-radius: 10px;
+    margin: 12px auto;
+    padding: 4px 12px;
+    width: 96%;
+    text-align: left;
+}
