--- a/src/screens/BusinessDetails/BusinessDetails.module.css
+++ b/src/screens/BusinessDetails/BusinessDetails.module.css
@@ -50,7 +50,8 @@
 
 .businessInfoRow {
     display: grid;
-    grid-template-columns: 1.48fr 2fr;
+    grid-template-columns: 1fr 1fr;
+    /* grid-template-columns: 1.48fr 2fr; */
     margin: 5px 0;
 }
 
@@ -64,6 +65,11 @@
     color: black;
     font-weight: 300;
     font-size: clamp(14px, 4vw, 16px);
+    overflow:  hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 .businessRegRow {
@@ -128,7 +134,6 @@
         margin: 45px 0 30px 0;
     }
     .detailsCard, .balancesheet {
-        margin: 0 15px;
         height: 498px;
         width: 84%;
         max-width: unset;
@@ -138,11 +143,14 @@
         justify-self: flex-end;
     }
     .balancesheet {
-        margin: 0 30px 0 15px;
+        /* margin: 0 30px 0 15px; */
         justify-self: flex-start;
     }
     .businessDesc {
         font-size: clamp(16px, 1.6vw, 24px);
+    }
+    .businessInfoRow {
+        grid-template-columns: 1.6fr 2fr;
     }
     .businessInfoLabel, .businessInfoValue, .businessRegRow p {
         font-size: clamp(14px, 1.25vw, 18px);
