--- a/src/components/BlogSlide/BlogSlide.module.css
+++ b/src/components/BlogSlide/BlogSlide.module.css
@@ -6,7 +6,8 @@
     width: 80%;
     max-width: 330px;
     padding: 15px 20px;
-    margin: 10px 0;
+    margin: 10px 12px;
+    min-height: 309px;
 }
 
 .header p {
@@ -22,6 +23,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    min-height: 54px;
 }
 
 .meta {
@@ -40,9 +42,25 @@
 }
 
 .imgPreview {
-    background: #C4C4C4;
+    /* background: #C4C4C4; */
     width: 100%;
     height: 194px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.defaultImg {
+    background: #C4C4C4;
+    width: 100%;
+    height: 100%;
+}
+
+.image {
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+    display: block;
 }
 
 /* .blogText {
