--- a/src/screens/Landing/CorpmartInMedia/CorpmartInMedia.module.css
+++ b/src/screens/Landing/CorpmartInMedia/CorpmartInMedia.module.css
@@ -23,11 +23,23 @@
 .mediaShowcase {
     flex: 9;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
 }
 
 .mediaShowcase div {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 248px;
+}
+.mediaShowcase div img {
+    max-width: 92%;
+    max-height: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+    .mediaShowcase {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
