--- a/src/screens/Landing/Main/Main.module.css
+++ b/src/screens/Landing/Main/Main.module.css
@@ -11,7 +11,7 @@
     display: flex;
     font-size: 30px;
     background: url('./group-of-person-sitting-indoors-3184306\ 1.jpg') center no-repeat;
-    background-size: auto;
+    background-size: cover;
 }
 
 .splash {
