--- a/src/screens/Testimonials/Testimonials.module.css
+++ b/src/screens/Testimonials/Testimonials.module.css
@@ -45,9 +45,14 @@
 
 @media only screen and (min-width: 1208px) {
     .carousel {
-        display: grid;
+        /* display: grid;
         grid-template-columns: repeat(3, 1fr);
         padding: 0 60px;
-        row-gap: 15px;
+        row-gap: 15px; */
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
     }
 }
