--- a/src/screens/BlogExpanded/BlogExpanded.module.css
+++ b/src/screens/BlogExpanded/BlogExpanded.module.css
@@ -1,15 +1,22 @@
 .BlogExpanded {
     display: flex;
     flex-direction: column;
+    align-items: center;
     min-height: 100vh;
+    width: 80%;
+    margin: auto;
+    margin-top: 64px;
 }
 
 .header {
     display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 .title {
     flex: 1;
     font-size: 24px;
+    text-align: left;
 }
 .meta {
     display: flex;
@@ -19,8 +26,30 @@
 }
 .date {
     flex: 1;
+    text-align: right;
 }
 .author {
     flex: 1;
-    text-align: right;
+    text-align: left;
+}
+
+.text {
+    display: flex;
+    text-align: left;
+}
+
+.image {
+    width: 64%;
+    height: 300px;
+    margin: 36px;
+}
+.image img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+@media only screen and (min-width: 1024px) {
+    .BlogExpanded {
+        width: 64%;
+    }
 }
