--- a/src/components/Navbar/NavbarMobile.module.css
+++ b/src/components/Navbar/NavbarMobile.module.css
@@ -23,6 +23,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    max-width: 100%;
+    overflow: hidden;
 }
 .searchBarWhite {
     border: 2px solid #FFFFFF;
