--- a/src/screens/Landing/Blogs/Blogs.module.css
+++ b/src/screens/Landing/Blogs/Blogs.module.css
@@ -24,6 +24,11 @@
     align-items: center;
 }
 
+.carousel a {
+    text-decoration: none;
+    color: black;
+}
+
 .btnContainer {
     margin: 30px 0;
 }
