--- a/src/components/BusinessSlide/BusinessSlide.module.css
+++ b/src/components/BusinessSlide/BusinessSlide.module.css
@@ -9,13 +9,14 @@
 
 .businessDesc {
     font-size: 18px;
-    text-align: justify;
     margin: 0;
+    text-align: left;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    min-height: 54px;
 }
 
 .verified {
