--- a/src/components/FilterSort/FilterDiv/FilterDiv.module.css
+++ b/src/components/FilterSort/FilterDiv/FilterDiv.module.css
@@ -1,11 +1,12 @@
 .FilterDiv {
     display: none;
     margin-top: 64px;
-    background: #FFFFFF;
+    background: #DADEE4;
     padding: 0 8px;
     overflow-y: scroll;
     scrollbar-width: none;
     -ms-overflow-style: none;
+    box-shadow: -1px 0px 10px rgba(0, 0, 0, 0.25);
 }
 .FilterDiv::-webkit-scrollbar { display: none; }
 
