--- a/src/screens/BusinessesForSale/BusinessesForSale.module.css
+++ b/src/screens/BusinessesForSale/BusinessesForSale.module.css
@@ -43,6 +43,10 @@
     justify-self: center;
 }
 
+.sortDropdownContainer {
+    margin: 30px 0;
+}
+
 @media only screen and (min-width: 1024px) {
     .container {
         display: grid;
