--- a/src/components/FilterSort/FilterSortMobile.module.css
+++ b/src/components/FilterSort/FilterSortMobile.module.css
@@ -48,6 +48,7 @@
     overflow-y: scroll;
     scrollbar-width: none;
     -ms-overflow-style: none;
+    padding-top: 11px;
 }
 .filterExp::-webkit-scrollbar {
     display: none;
@@ -56,7 +57,8 @@
 .option {
     all: unset;
     display: grid;
-    grid-template-columns: 9fr 1fr;
+    grid-template-columns: 8fr 2fr;
+    margin: 1px 0;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -64,19 +66,32 @@
 
 .optionExpLabel {
     font-weight: 300;
-    font-size: 16px;
-    overflow: hidden;
+    font-size: 14px;
+    /* overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    margin: 0 10px;
+    -webkit-box-orient: vertical; */
+    margin: 0 8px;
     text-align: left;
+}
+
+.sortExp {
+    padding-top: 7.5px;
 }
 
 .sortExp p {
     text-align: left;
     margin: 7.5px 10px;
+}
+
+.checkbox {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.checkbox svg {
+    margin-right: 6px;
 }
 
 @media only screen and (min-width: 1024px) {
