--- a/src/components/FilterSort/filterOptions/filterOptions.module.css
+++ b/src/components/FilterSort/filterOptions/filterOptions.module.css
@@ -12,6 +12,7 @@
 
 .header p {
     margin: 0 8px;
+    font-size: 14px;
     text-align: left;
 }
 
@@ -27,7 +28,9 @@
 
 .filterOptions {
     scrollbar-width: 0;
-    background-color: #DADEE4;
+    /* background-color: #DADEE4; */
+    /* background-color: #E5E5E5; */
+    background-color: white;
     -ms-overflow-style: none;
 }
 
@@ -43,16 +46,22 @@
     justify-content: center;
     align-items: center;
 }
+.option div {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 12px;
+}
 
 .optionExpLabel {
     font-weight: 300;
-    font-size: 16px;
-    overflow: hidden;
+    font-size: 14px;
+    /* overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    margin: 0 10px;
+    -webkit-box-orient: vertical; */
+    margin: 2px 10px;
     text-align: left;
 }
 
@@ -62,7 +71,7 @@
 
 .sliderContainer {
     max-height: 120px;
-    background-color: #DADEE4;
+    background-color: white;
     overflow-y: scroll;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
@@ -72,6 +81,7 @@
 }
 .sliderContainer p {
     text-align: left;
+    font-size: 14px;
     margin: 1px 30px;
 }
 
