--- a/src/screens/Login/Login.module.css
+++ b/src/screens/Login/Login.module.css
@@ -1,6 +1,7 @@
 .Login {
     display: flex;
-    background-color: rgba(0,0,0,0.5);
+    background-color: #4AB9CA;
+    /* background-color: rgba(0,0,0,0.5); */
     /* background-color: #E5E5E5; */
     justify-content: center;
     align-items: center;
@@ -33,7 +34,7 @@
 .form {
     background-color: white;
     width: 88%;
-    margin: 48px 0;
+    margin: 112px 0 20px 0;
     border-radius: 10px;
     padding: 20px 0;
     min-height: 51vh;
