--- a/src/screens/Signup/Signup.module.css
+++ b/src/screens/Signup/Signup.module.css
@@ -1,6 +1,7 @@
 .Signup {
     display: flex;
-    background-color: rgba(0,0,0,0.5);
+    background-color: #4AB9CA;
+    /* background-color: rgba(0,0,0,0.5); */
     /* background-color: #E5E5E5; */
     justify-content: center;
     align-items: center;
@@ -33,7 +34,7 @@
 .form {
     background-color: white;
     width: 88%;
-    margin: 48px 0;
+    margin: 86px 0 20px 0;
     border-radius: 10px;
     padding: 20px 0;
     min-height: 51vh;
@@ -102,6 +103,9 @@
 }
 
 @media only screen and (min-width: 1024px) {
+    .form {
+        width: 64%;
+    }
     .formFields {
         width: 74%;
         margin: 15px auto;
