--- a/src/screens/ContactUs/ContactUs.module.css
+++ b/src/screens/ContactUs/ContactUs.module.css
@@ -62,11 +62,18 @@
     border-radius: 10px;
     min-height: 40px;
     margin: 2.5px 0;
-    text-align: center;
+    padding: 2px 10px;
+    text-align: left;
 }
 
 .inputField:focus {
     outline: none;
+}
+
+.query {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 4px 10px;
+    resize: none;
 }
 
 .submitBtn {
