--- a/src/screens/ListingForm/ListingForm.module.css
+++ b/src/screens/ListingForm/ListingForm.module.css
@@ -74,6 +74,8 @@
     border-radius: 10px;
     min-height: 40px;
     margin: 2.5px 0;
+    padding-left: 8px;
+    font-size: 16px;
 }
 
 .inputField:focus {
