--- a/src/screens/BusinessesForSale/BusinessesForSale.module.css
+++ b/src/screens/BusinessesForSale/BusinessesForSale.module.css
@@ -14,6 +14,14 @@
     padding: 64px 0;
 }
 
+.loading {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
 .header {
     padding-top: 20px;
     margin: 0 0 15px 16px;
