--- a/src/screens/BusinessesForSale/BusinessesForSale.module.css
+++ b/src/screens/BusinessesForSale/BusinessesForSale.module.css
@@ -52,7 +52,10 @@
 }
 
 .sortDropdownContainer {
-    margin: 30px 0;
+    margin: 30px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 @media only screen and (min-width: 1024px) {
