--- a/src/screens/RegistrationSuccess/RegistrationSuccess.module.css
+++ b/src/screens/RegistrationSuccess/RegistrationSuccess.module.css
@@ -1,3 +1,13 @@
+.container {
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+.container::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
 .RegistrationSuccess {
     display: flex;
     background-color: #4AB9CA;
@@ -7,13 +17,17 @@
     align-items: center;
     min-height: 100vh;
 }
+.RegistrationSuccess::-webkit-scrollbar { /* WebKit */
+    width: 0;
+    height: 0;
+}
 
 .card {
     display: grid;
     grid-template-rows: 1fr 1.2fr 0.8fr;
     background-color: white;
     width: 88%;
-    margin: 48px 0;
+    margin-top: 60px;
     border-radius: 10px;
     padding: 20px 0;
 }
@@ -33,21 +47,15 @@
     margin: 0 clamp(20px, 5.2vw, 120px);
 }
 
-.btns {
-    display: grid;
-    grid-template-columns: 1.2fr 0.8fr;
-}
 .btn {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.listBtn, .continueBtn {
-    font-size: 14px;
-    font-weight: 600;
-}
 .continueBtn {
     padding: 10px 16px;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 @media only screen and (min-width: 330px) {
@@ -57,10 +65,8 @@
 }
 
 @media only screen and (min-width: 768px) {
-    .listBtn, .continueBtn {
-        font-size: 18px;
-    }
     .continueBtn {
+        font-size: 18px;
         padding: 12px 30px;
     }
     .card {
@@ -75,6 +81,9 @@
 }
 
 @media only screen and (min-width: 1024px) {
+    .RegistrationSuccess {
+        overflow-y: hidden;
+    }
     .text {
         margin: 0 120px;
     }
@@ -83,9 +92,17 @@
     }
 }
 
+@media only screen and (min-width: 1280px) {
+    .card {
+        width: 64%;
+        margin-top: 60px;
+        grid-template-rows: 1fr 1.6fr 1fr;
+    }
+}
+
 @media only screen and (min-width: 1440px) {
     .card {
         width: 64%;
-        grid-template-rows: 1fr 3.2fr 0.8fr;
+        grid-template-rows: 1fr 2.4fr 0.8fr;
     }
 }
