--- a/src/screens/Landing/Footer/Footer.module.css
+++ b/src/screens/Landing/Footer/Footer.module.css
@@ -47,6 +47,14 @@
     font-size: 12px;
     margin: 10px 20px;
 }
+.tos a {
+    text-decoration: none;
+    color: inherit;
+}
+.tos a:hover {
+    text-decoration: underline;
+}
+
 
 @media only screen and (min-width: 768px) {
     .FooterMobile {
