--- a/src/screens/UserDashboard/UserDashboard.module.css
+++ b/src/screens/UserDashboard/UserDashboard.module.css
@@ -13,11 +13,13 @@
     grid-template-rows: 1fr 8fr;
     margin-top: 64px;
     background: #FFFFFF;
+    height: 100vh;
 }
 
 .sidebarOptions {
     display: flex;
     flex-direction: column;
+    cursor: pointer;
 }
 
 .sidebarOptionsText {
