Using webp instead of jpg for larger images

--- a/src/screens/Landing/Main/Main.module.css
+++ b/src/screens/Landing/Main/Main.module.css
@@ -10,7 +10,7 @@
     width: 100%;
     display: flex;
     font-size: 30px;
-    background: url('./group-of-person-sitting-indoors-3184306\ 1.jpg') center no-repeat;
+    background: url('./group-of-person-sitting-indoors-3184306\ 1.webp') center no-repeat;
     background-size: cover;
 }
 
