--- a/src/screens/Landing/Testimonials/Testimonials.module.css
+++ b/src/screens/Landing/Testimonials/Testimonials.module.css
@@ -45,7 +45,7 @@
 }
 @media only screen and (min-width: 768px) {
     .Testimonials {
-        background: url(./background.png) no-repeat center;
+        background: url(./background.webp) no-repeat center;
         background-size: contain; 
     }
 }
