--- a/src/screens/Landing/Blogs/Blogs.module.css
+++ b/src/screens/Landing/Blogs/Blogs.module.css
@@ -50,7 +50,7 @@
 }
 @media only screen and (min-width: 768px) {
     .Blogs {
-        background: url(./background.png) no-repeat center;
+        background: url(./background.webp) no-repeat center;
         background-size: contain; 
     }
 }
