--- a/src/screens/Signup/Signup.module.css
+++ b/src/screens/Signup/Signup.module.css
@@ -61,7 +61,8 @@
     border-radius: 10px;
     min-height: 40px;
     margin: 2.5px 0;
-    text-align: center;
+    padding-left: 8px;
+    font-size: 16px;
 }
 
 .inputField:focus {
@@ -107,7 +108,7 @@
         width: 64%;
     }
     .formFields {
-        width: 74%;
+        width: 84%;
         margin: 15px auto;
     }
     .inputLabel {
