--- a/src/screens/Blogs/BlogSlideLarge.module.css
+++ b/src/screens/Blogs/BlogSlideLarge.module.css
@@ -10,6 +10,10 @@
     margin: 10px 12px;
 }
 
+.header {
+    margin-left: 20px;
+}
+
 .header p {
     margin: 10px 0;
 }
@@ -56,8 +60,8 @@
 }
 
 .image {
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 100%;
+    max-height: 100%;
     margin: auto;
     display: block;
 }
