--- a/src/screens/Landing/CorpmartInMedia/CorpmartInMedia.module.css
+++ b/src/screens/Landing/CorpmartInMedia/CorpmartInMedia.module.css
@@ -24,24 +24,36 @@
 .mediaShowcase {
     flex: 9;
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    margin: 40px 0;
+    grid-template-rows: repeat(1, 1fr);
+    margin: 40px auto;
 }
 
-.mediaShowcase div {
+.mediaShowcase .mediaRow {
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
+}
+
+.imgContainer {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 248px;
+    margin: 40px auto;
 }
-.mediaShowcase div img {
+.mediaShowcase img {
     max-width: 92%;
     max-height: 100%;
 }
 
 @media only screen and (min-width: 768px) {
     .mediaShowcase {
+        grid-template-rows: repeat(2, 1fr);
+        margin: 40px auto;
+    }
+    .mediaShowcase .mediaRow {
+        display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
+    
 }
