--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -35,7 +35,7 @@
     flex: 9;
     background: transparent;
     font-weight: 300;
-    font-size: 18px;
+    font-size: 16px;
     text-transform: none;
     text-align: left;
     padding: 0 16px;
@@ -52,7 +52,7 @@
     background: transparent;
 }
 .searchBarBlack input::placeholder {
-    color: black;
+    color: #676767;
 }
 
 .navBtn {
