Added Markdown + Fixed BlogSlideLarge Size

--- a/src/screens/BlogExpanded/BlogExpanded.module.css
+++ b/src/screens/BlogExpanded/BlogExpanded.module.css
@@ -35,6 +35,7 @@
 
 .text {
     display: flex;
+    flex-direction: column;
     text-align: left;
     margin-top: 16px;
     margin-bottom: 36px;
