--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -79,6 +79,11 @@
 .logo {
     display: none;
 }
+.logo a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .logo img {
     max-width: 100%;
     max-height: 100%;
