--- a/src/screens/Blogs/BlogSlideLarge.module.css
+++ b/src/screens/Blogs/BlogSlideLarge.module.css
@@ -1,3 +1,9 @@
+.BlogSlideLarge {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
 .slide {
     display: grid;
     grid-template-columns: 1fr 2.5fr;
