Added Links to ToS on ListingForm and Signup.

--- a/src/components/BlogSlide/BlogSlide.module.css
+++ b/src/components/BlogSlide/BlogSlide.module.css
@@ -40,6 +40,11 @@
 .author {
     text-align: right;
     color: #484848;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 .imgPreview {
